progress km curve

--- a/test.qmd
+++ b/test.qmd
@@ -381,25 +381,6 @@ res = DataFrame(set_rows)
 ```
 
 
-```{julia}
-using CairoMakie
-
-f = Figure()
-ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", xticks=collect(0:1000:5500) ,limits = (0, 5500, 0.85, 1))
-stairs!(ax1, ourtime, survival_rate; step=:post, color=:blue)
-band!(ax1, ourtime ,higher, lower ; color = (:blue, 0.2))
-ax2 = Axis(f[2, 1], title="Number at risk", titlealign = :left, xticks=collect(0:1000:5500), xlabel="")
-hidespines!(ax2, :t, :r) # only top and right
-linkxaxes!(ax1, ax2)
-hideydecorations!(ax2)
-text!(ax2, repeat(set_times, inner=1), ones(Int, length(set_times)), text=string.(res[:, :n_atrisk]), align = (:center, :center))
-rowsize!(f.layout, 2, Relative(1/3))
-
-f
-
-
-```
-
 # KM with two curve
 ```{julia}
 using Survival
@@ -521,66 +502,54 @@ stepify(expanded_dfs[2])
 
 
 
- ```{julia}
-
-# make two 
-using CairoMakie
-
-
-f = Figure()
-ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", xticks=collect(0:1000:5500) ,limits = (0, 5500, 0.5, 1))
-lines!(ax1, stepify(expanded_dfs[1])[!, :survtime], stepify(expanded_dfs[1])[!, :survival];  color = :blue)
-lines!(ax1, stepify(expanded_dfs[2])[!, :survtime], stepify(expanded_dfs[2])[!, :survival];  color = :red)
-
-band!(ax1, stepify(expanded_dfs[1])[!, :survtime], stepify(expanded_dfs[1])[!, :higher], stepify(expanded_dfs[1])[!, :lower]; color = (:blue, 0.2))
-
-band!(ax1, stepify(expanded_dfs[2])[!, :survtime], stepify(expanded_dfs[2])[!, :higher], stepify(expanded_dfs[2])[!, :lower]; color = (:red, 0.2))
-
-ax2 = Axis(f[2, 1], title="Number at risk", titlealign = :left, xticks=collect(0:1000:5500), xlabel="")
-hidespines!(ax2, :t, :r) # only top and right
-linkxaxes!(ax1, ax2)
-hideydecorations!(ax2)
-
-text!(ax2, repeat(set_times, inner=2), repeat(1:2, outer = length(set_times)), text=string.(res[:, :natrisk]), align = (:center, :center))
-rowsize!(f.layout, 2, Relative(1/3))
-
-f
-
-```
 
 ```{julia}
-using CairoMakie
+using CairoMakie, Colors
 
-f = Figure(padding=(30, 30, 30, 30))  # 全体のパディングを増やす
+g_levels = length(expanded_dfs)
+
+f = Figure(padding=(30, 30, 30, 30))
 ax1 = Axis(f[1, 1], title="Kaplan-Meier Curve", xlabel="Time", ylabel="Survival Rate", 
            xticks=collect(0:1000:5500), limits=(0, 5500, 0.5, 1))
-lines!(ax1, stepify(expanded_dfs[1])[!, :survtime], stepify(expanded_dfs[1])[!, :survival]; color=:blue)
-lines!(ax1, stepify(expanded_dfs[2])[!, :survtime], stepify(expanded_dfs[2])[!, :survival]; color=:red)
 
-band!(ax1, stepify(expanded_dfs[1])[!, :survtime], stepify(expanded_dfs[1])[!, :higher], stepify(expanded_dfs[1])[!, :lower]; color=(:blue, 0.2))
-band!(ax1, stepify(expanded_dfs[2])[!, :survtime], stepify(expanded_dfs[2])[!, :higher], stepify(expanded_dfs[2])[!, :lower]; color=(:red, 0.2))
+# 手動で対照的な色を設定
+distinct_colors = [RGB(0.0, 0.0, 0.8),   # 濃い青
+                   RGB(0.8, 0.0, 0.0)]   # 濃い赤
+
+# グループ数が2つより多い場合は、対照的な色のリストを拡張
+if g_levels > 2
+    # HSV色空間で均等に分布した色を生成
+    distinct_colors = [HSV(360.0 * (i-1) / g_levels, 0.85, 0.85) for i in 1:g_levels]
+end
+
+for i in 1:g_levels
+  color_i = distinct_colors[i]
+  # 透明度を持つ同じ色を作成
+  color_i_alpha = RGBAf(color_i.r, color_i.g, color_i.b, 0.2)
+  
+  lines!(ax1, stepify(expanded_dfs[i])[!, :survtime], stepify(expanded_dfs[i])[!, :survival]; color=color_i, linewidth=2.5)
+  band!(ax1, stepify(expanded_dfs[i])[!, :survtime], stepify(expanded_dfs[i])[!, :higher], stepify(expanded_dfs[i])[!, :lower]; color=color_i_alpha)
+end
 
 # Number at risk のパネル設定を調整
-ax2 = Axis(f[2, 1], title="Number at risk", titlealign=:left, xticks=collect(0:1000:5500),xlabel="",
+ax2 = Axis(f[2, 1], title="Number at risk", titlealign=:left, xticks=collect(0:1000:5500), xlabel="",
            height=60, # 高さを固定して余白を作る
            yticklabelpad=10, # Y軸ラベルのパディング
-           yticks = [1.3, 1.7],
-           ytickformat=values -> [value == 1.3 ? "m" : value == 1.7 ? "f" : "" for value in values],
-           limits = (nothing, nothing, 1, 2)
+           yticks = [1/(g_levels+1), 2/(g_levels+1)],
+           ytickformat=values -> [value == 1/(g_levels+1) ? "m" : value == 2/(g_levels+1) ? "f" : "" for value in values],
+           limits = (nothing, nothing, 0, 1)
            ) 
 
 hidespines!(ax2, :t, :r) # 上のスパインを非表示
 linkxaxes!(ax1, ax2)
-# hideydecorations!(ax2)
 
-# テキストの位置を調整（Y座標を1.5と1.8に変更）
-text!(ax2, repeat(set_times, inner=2), repeat([1.3, 1.7], outer=length(set_times)), 
+# テキストの位置を調整
+text!(ax2, repeat(set_times, inner=2), repeat([1/(g_levels+1), 2/(g_levels+1)], outer=length(set_times)), 
       text=string.(res[:, :natrisk]), align=(:center, :center))
 
 # パネル間の余白を設定
-rowgap!(f.layout, 15) # パネル間に15ピクセルの間隔を追加
-rowsize!(f.layout, 2, Relative(1/4)) # Number at riskパネルの相対サイズを調整
+rowgap!(f.layout, 15) 
+rowsize!(f.layout, 2, Relative(1/4))
 
 f
-
 ```
